# claude

./: .gitignore  README.md  pyproject.toml
.claude/: .mcp.json
.claude/commands/: add-source.md  cite-check.md  fetch-ev-data.md  forecast-update.md  refresh-analysis.md
claude/: __init__.py  client.py
docs/: ev_forecast_2030.md  evs_adoption.md
docs/sources/: README.md  acea_ev_registrations.md  battery_costs_ev_economics.md  eafo_ev_fleet_stock.md  eu_co2_regulations_policy.md  eu_electricity_market.md  eu_oil_imports_trade_balance.md
examples/: basic_message.py  streaming.py
mcp/: README.md  docker-compose.yml
mcp/gateway/: Dockerfile  backends.json  server.py
mcp/names/: server.py
tests/: test_client.py
